Additions to the BE tutorial vol2: QSP, QET, QSVT, GQSP

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "3ebec0e6",
    "metadata": {},
    "outputs": [],
@@ -86,10 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "341a06dc",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulating 1 qubits.. |                                                      | [  0%]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -144,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "37aa950d",
    "metadata": {},
    "outputs": [
@@ -155,7 +162,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m cheb_resources = \u001b[43mBE_cheb_2\u001b[49m\u001b[43m.\u001b[49m\u001b[43mresources\u001b[49m\u001b[43m(\u001b[49m\u001b[43moperand_prep\u001b[49m\u001b[43m)\u001b[49m()\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(cheb_resources)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m cheb_resources = \u001b[43mBE_cheb_2\u001b[49m\u001b[43m.\u001b[49m\u001b[43mresources\u001b[49m\u001b[43m(\u001b[49m\u001b[43moperand_prep\u001b[49m\u001b[43m)\u001b[49m()\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(cheb_resources)\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~\\Desktop\\CODE\\Qrisp_007\\Qrisp\\src\\qrisp\\block_encodings\\block_encoding.py:757\u001b[39m, in \u001b[36mBlockEncoding.resources\u001b[39m\u001b[34m(self, meas_behavior, *operands)\u001b[39m\n\u001b[32m    691\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mresources\u001b[39m(\u001b[38;5;28mself\u001b[39m, *operands: QuantumVariable, meas_behavior: \u001b[38;5;28mstr\u001b[39m = \u001b[33m\"\u001b[39m\u001b[33m0\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m    692\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33mr\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    693\u001b[39m \u001b[33;03m    Estimate the quantum resources required for the BlockEncoding.\u001b[39;00m\n\u001b[32m    694\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    754\u001b[39m \n\u001b[32m    755\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m757\u001b[39m     ops_templates = \u001b[43m[\u001b[49m\u001b[43mop\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtemplate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mop\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43moperands\u001b[49m\u001b[43m]\u001b[49m\n\u001b[32m    759\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34moperand_prep\u001b[39m():\n\u001b[32m    760\u001b[39m         operands = [temp.construct() \u001b[38;5;28;01mfor\u001b[39;00m temp \u001b[38;5;129;01min\u001b[39;00m ops_templates]\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~\\Desktop\\CODE\\Qrisp_007\\Qrisp\\src\\qrisp\\block_encodings\\block_encoding.py:757\u001b[39m, in \u001b[36m<listcomp>\u001b[39m\u001b[34m(.0)\u001b[39m\n\u001b[32m    691\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mresources\u001b[39m(\u001b[38;5;28mself\u001b[39m, *operands: QuantumVariable, meas_behavior: \u001b[38;5;28mstr\u001b[39m = \u001b[33m\"\u001b[39m\u001b[33m0\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m    692\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33mr\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    693\u001b[39m \u001b[33;03m    Estimate the quantum resources required for the BlockEncoding.\u001b[39;00m\n\u001b[32m    694\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    754\u001b[39m \n\u001b[32m    755\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m757\u001b[39m     ops_templates = [\u001b[43mop\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtemplate\u001b[49m() \u001b[38;5;28;01mfor\u001b[39;00m op \u001b[38;5;129;01min\u001b[39;00m operands]\n\u001b[32m    759\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34moperand_prep\u001b[39m():\n\u001b[32m    760\u001b[39m         operands = [temp.construct() \u001b[38;5;28;01mfor\u001b[39;00m temp \u001b[38;5;129;01min\u001b[39;00m ops_templates]\n",
       "\u001b[31mAttributeError\u001b[39m: 'function' object has no attribute 'template'"
@@ -177,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3b7698cf",
    "metadata": {},
    "outputs": [
@@ -258,76 +265,148 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3ca9a522",
+   "metadata": {},
+   "source": [
+    "## Quantum Signal Processing (QSP)\n",
+    "\n",
+    "While Qubitization allows us to block-encode Chebyshev polynomials $T_k$ by simply repeating a walk operator $W=RU$, Quantum Signal Processing (QSP) provides a way to implement arbitrary polynomial transformations $P(A)$.\n",
+    "\n",
+    "At its core, QSP manipulates a single-qubit \"signal\" using a sequence of rotations. If we have a signal operator $W(x)$ that encodes some value $x \\in [-1, 1]$, and we interleave it with a series of phase shifts $e^{i\\phi_j Z}$, the resulting product of unitaries can be written as:\n",
+    "$$U_\\Phi(x) = e^{i\\phi_0 Z} \\prod_{j=1}^d W(x) e^{i\\phi_j Z}$$\n",
+    "\n",
+    "Through a clever choice of the phase angles $\\{\\phi_0, \\phi_1, \\dots, \\phi_d\\}$, the block-encoding (top left block) of this unitary becomes a polynomial $P(x)$. \n",
+    "\n",
+    "The Fundamental Theorem of QSP states that there exists a set of phase angles $\\{\\phi_0, \\dots, \\phi_d\\}$ such that the top-left block of $U_\\Phi$ corresponds to a polynomial $P(A/\\alpha)$ where:\n",
+    "\n",
+    "- $\\text{deg}(P) \\leq d$\n",
+    "\n",
+    "- $P$ has parity $d \\pmod 2$ (it is either purely even or purely odd), and\n",
+    "\n",
+    "- $|P(x)| \\leq 1$ for all $x \\in [-1, 1]$\n",
+    "\n",
+    "I know, I know, this was quite a lot of theory, but as usually, we're here to make things simple with Qrisp. We have made it possible for you to not even worry worry about the classical math of finding these angles! Obtaining them involves some heavy Laurent series and optimization already included in Qrisp as an an internal \"angle solver\" that handles this \"classical nightmare\" for you. You can therefore treat these complex mathematical transformations as simple method calls!\n",
+    "\n",
+    "As a final point of emphasis here, the main advantage of QSP lies in its optimality: it can approximate any continuous function to within error $\\epsilon$ using a circuit depth that scales nearly linearly with the complexity of the function, meeting the theoretical lower bounds for quantum query complexity.\n",
+    "\n",
+    "### Quantum Eigenvalue and Singular Value Transformation\n",
+    "\n",
+    "Building on our discussion of Qubitization and LCU, we can now dive into the \"Grand Unification\" of quantum algorithms: Quantum Singular Value Transformation (QSVT). In the context of Lin Lin’s lecture notes, these methods represent the most efficient way to process matrices on a quantum computer by treating a matrix as a ``BlockEncoding``.\n",
+    "\n",
+    "QSVT allows us to apply a polynomial $P$ to the singular values of a matrix $A$ without needing a full Singular Value Decomposition (SVD). Beware, a bit more maths before showing examples of how to perform this simply and intuitevely as methods of the class we've been covering.\n",
+    "\n",
+    "Consider a matrix $A \\in \\mathbb{C}^{m \\times n}$ with $\\|A\\| \\leq 1$. Let its SVD be $A = \\sum_{i} \\sigma_i \\ket{w_i} \\bra{v_i}$. If we have a $(\\alpha, m, \\epsilon)$-block encoding $U$, our goal is to construct a new unitary $U_\\Phi$ that implements:\n",
+    "$$P(A) = \\sum_{i} P(\\sigma_i) \\ket{w_i} \\bra{v_i}.$$\n",
+    "\n",
+    "QSVT does this by using Projector-Controlled Phase gates interleaved with the block encoding $U$. Let $\\Pi = \\ket{0}\\bra{0}^a \\otimes \\mathbb{1}$ be the projector onto the subspace where $A$ lives. The QSVT circuit schematics for a degree-$d$ polynomial is:\n",
+    "$$U_\\Phi = e^{i\\phi_1(2\\Pi - I)} U e^{i\\phi_2(2\\Pi - I)} U^\\dagger e^{i\\phi_3(2\\Pi - I)} U \\dots.$$\n",
+    "To visualize this, the following circuit schematics can help.\n",
+    "\n",
+    "![Alt text](BE_QSVT.png)\n",
+    "\n",
+    "As promised above, you don't even need to care about these angles with our crispy clean implementation. Generalizing QSP is the final piece of this mosaic.\n",
+    "\n",
+    "### Lifting constraints and generalizing QSP\n",
+    "While standard QSVT is a milestone, it is limited by the parity constraint. In simpler terms, that the polynomials must be strictly even or odd, and their coefficients be real (I'm sure that was a social media at some point, right?). \n",
+    "\n",
+    "Recent advancements (e.g., Sünderhauf et al., 2023) have introduced Generalized versions that remove these restrictions.\n",
+    "\n",
+    "- GQET (Generalized Quantum Eigenvalue Transformation): Specifically for Hermitian matrices, GQET applies complex polynomials $P(x)$ to eigenvalues. Unlike standard QET, $P(x)$ can have indefinite parity (e.g., $P(x) = x^2 + x + 1$). This is achieved by replacing simple $Z$-rotations with general $SU(2)$ rotations in the signal processing stage.\n",
+    "\n",
+    "- GQSVT (Generalized Quantum Singular Value Transformation): This is the extension of QSVT to arbitrary matrices using the generalized framework.\n",
+    "\n",
+    "Why does this generalization matter so much? It allows for mixed parity polynomial, resulting in you being to implement functions like $e^{-iAt}$ directly without splitting them into sine (odd) and cosine (even) components.\n",
+    "\n",
+    "Apart from that, finding phase factors for standard QSVT is often a hard optimization problem scaling as $\\tilde{O}(d^2)$. In the Generalized (GQSP) framework, phases can often be computed in linear time $\\tilde{O}(d)$, making it significantly more practical for more quantum resource heavy application.\n",
+    "\n",
+    "Ok, enough of this, let's now show how you can use, run, simulate, and provide resource analysis for there kinds of algorithms.\n",
+    "\n",
+    "## QSP with Qrisp\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f8f1250",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e5df298",
+   "metadata": {},
+   "source": [
+    "### Polynomial transformations in Qrisp: ``.poly``\n",
+    "\n",
+    "In Qrisp, you don't need to manually calculate the phase angles $\\phi_j$ (which is classically a difficult task). The BlockEncoding class provides the .poly() method. You simply provide the desired polynomial coefficients, and Qrisp uses high-performance classical subroutines to find the necessary phases and construct the QSP sequence."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc2235fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: Applying a custom 3rd order polynomial P(x) = 0.5x^3 + 0.1x\n",
+    "# Note: The coefficients must satisfy |P(x)| <= 1\n",
+    "coeffs = [0, 0.1, 0, 0.5] \n",
+    "BE_poly = BE.poly(coeffs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47f2da58",
+   "metadata": {},
+   "source": [
+    "This abstraction allows researchers to focus on the algorithm (the function to be applied) rather than the implementation (the underlying phase-shift sequences)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "956be4ee",
+   "metadata": {},
+   "source": [
+    "### Solving linear systems in Qrisp: ``.inv``"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7b09e62",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5785ae0b",
+   "metadata": {},
+   "source": [
+    "### Hamiltonian simulation with LCU in Qrisp: ``.sim``"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34c5017c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "c9f4137f",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07511185",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cfe95e39",
-   "metadata": {},
    "source": [
-    "#### Inverse using ``.inv``\n",
+    "## Conclusion\n",
     "\n",
-    "EXPLAIN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e8d3eb2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### EXAMPLE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1d2bffaa",
-   "metadata": {},
-   "source": [
-    "#### Polynomial transformations using ``.poly``\n",
+    "  \n",
     "\n",
-    "EXPLAIN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2842dced",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### EXAMPLE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f9c953f0",
-   "metadata": {},
-   "source": [
-    "#### Hamiltnian simulation using ``.sim``\n",
-    "\n",
-    "EXPLAIN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33010980",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### EXAMPLE"
+    "We’ve moved from building matrices to performing functional analysis on a quantum computer. Here is your cheat sheet:Qubitization is the engine. It turns a Block Encoding into a \"Quantum Walk\" that stays within tiny 2D subspaces.Chebyshev Polynomials are the language. They are the natural output of repeating a Qubitized operator and are mathematically optimal for approximations.QSP is the steering wheel. By interleaving phase shifts, we can transform $A$ into almost any $f(A)$.Qrisp is the autopilot. It solves for the phase angles and manages the ancillas so you can treat $f(A)$ like a standard programming object."
    ]
   }
  ],
