Fixed .resource examples, all code blocks are now executable

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -151,26 +151,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "37aa950d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'function' object has no attribute 'template'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m cheb_resources = \u001b[43mBE_cheb_2\u001b[49m\u001b[43m.\u001b[49m\u001b[43mresources\u001b[49m\u001b[43m(\u001b[49m\u001b[43moperand_prep\u001b[49m\u001b[43m)\u001b[49m()\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(cheb_resources)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\Desktop\\CODE\\Qrisp_007\\Qrisp\\src\\qrisp\\block_encodings\\block_encoding.py:757\u001b[39m, in \u001b[36mBlockEncoding.resources\u001b[39m\u001b[34m(self, meas_behavior, *operands)\u001b[39m\n\u001b[32m    691\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mresources\u001b[39m(\u001b[38;5;28mself\u001b[39m, *operands: QuantumVariable, meas_behavior: \u001b[38;5;28mstr\u001b[39m = \u001b[33m\"\u001b[39m\u001b[33m0\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m    692\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33mr\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    693\u001b[39m \u001b[33;03m    Estimate the quantum resources required for the BlockEncoding.\u001b[39;00m\n\u001b[32m    694\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    754\u001b[39m \n\u001b[32m    755\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m757\u001b[39m     ops_templates = \u001b[43m[\u001b[49m\u001b[43mop\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtemplate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mop\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43moperands\u001b[49m\u001b[43m]\u001b[49m\n\u001b[32m    759\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34moperand_prep\u001b[39m():\n\u001b[32m    760\u001b[39m         operands = [temp.construct() \u001b[38;5;28;01mfor\u001b[39;00m temp \u001b[38;5;129;01min\u001b[39;00m ops_templates]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\Desktop\\CODE\\Qrisp_007\\Qrisp\\src\\qrisp\\block_encodings\\block_encoding.py:757\u001b[39m, in \u001b[36m<listcomp>\u001b[39m\u001b[34m(.0)\u001b[39m\n\u001b[32m    691\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mresources\u001b[39m(\u001b[38;5;28mself\u001b[39m, *operands: QuantumVariable, meas_behavior: \u001b[38;5;28mstr\u001b[39m = \u001b[33m\"\u001b[39m\u001b[33m0\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m    692\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33mr\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    693\u001b[39m \u001b[33;03m    Estimate the quantum resources required for the BlockEncoding.\u001b[39;00m\n\u001b[32m    694\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    754\u001b[39m \n\u001b[32m    755\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m757\u001b[39m     ops_templates = [\u001b[43mop\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtemplate\u001b[49m() \u001b[38;5;28;01mfor\u001b[39;00m op \u001b[38;5;129;01min\u001b[39;00m operands]\n\u001b[32m    759\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34moperand_prep\u001b[39m():\n\u001b[32m    760\u001b[39m         operands = [temp.construct() \u001b[38;5;28;01mfor\u001b[39;00m temp \u001b[38;5;129;01min\u001b[39;00m ops_templates]\n",
-      "\u001b[31mAttributeError\u001b[39m: 'function' object has no attribute 'template'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'gate counts': {'cx': 12, 'rx': 2, 'gphase': 4, 'p': 2, 'cz': 6, 'u3': 4, 'x': 8}, 'depth': 33}\n"
      ]
     }
    ],
    "source": [
-    "cheb_resources = BE_cheb_2.resources(operand_prep)()\n",
+    "qv = operand_prep()\n",
+    "\n",
+    "cheb_resources = BE_cheb_2.resources(qv)\n",
     "print(cheb_resources)"
    ]
   },
@@ -184,32 +180,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3b7698cf",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'function' object has no attribute 'template'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m BE_cheb = BE.chebyshev(k, rescale=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# Extract resource dictionary\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m cheb_resources = \u001b[43mBE_cheb\u001b[49m\u001b[43m.\u001b[49m\u001b[43mresources\u001b[49m\u001b[43m(\u001b[49m\u001b[43moperand_prep\u001b[49m\u001b[43m)\u001b[49m()\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mk = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mk\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcheb_resources\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\Desktop\\CODE\\Qrisp_007\\Qrisp\\src\\qrisp\\block_encodings\\block_encoding.py:757\u001b[39m, in \u001b[36mBlockEncoding.resources\u001b[39m\u001b[34m(self, meas_behavior, *operands)\u001b[39m\n\u001b[32m    691\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mresources\u001b[39m(\u001b[38;5;28mself\u001b[39m, *operands: QuantumVariable, meas_behavior: \u001b[38;5;28mstr\u001b[39m = \u001b[33m\"\u001b[39m\u001b[33m0\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m    692\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33mr\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    693\u001b[39m \u001b[33;03m    Estimate the quantum resources required for the BlockEncoding.\u001b[39;00m\n\u001b[32m    694\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    754\u001b[39m \n\u001b[32m    755\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m757\u001b[39m     ops_templates = \u001b[43m[\u001b[49m\u001b[43mop\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtemplate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mop\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43moperands\u001b[49m\u001b[43m]\u001b[49m\n\u001b[32m    759\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34moperand_prep\u001b[39m():\n\u001b[32m    760\u001b[39m         operands = [temp.construct() \u001b[38;5;28;01mfor\u001b[39;00m temp \u001b[38;5;129;01min\u001b[39;00m ops_templates]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\Desktop\\CODE\\Qrisp_007\\Qrisp\\src\\qrisp\\block_encodings\\block_encoding.py:757\u001b[39m, in \u001b[36m<listcomp>\u001b[39m\u001b[34m(.0)\u001b[39m\n\u001b[32m    691\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mresources\u001b[39m(\u001b[38;5;28mself\u001b[39m, *operands: QuantumVariable, meas_behavior: \u001b[38;5;28mstr\u001b[39m = \u001b[33m\"\u001b[39m\u001b[33m0\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m    692\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33mr\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    693\u001b[39m \u001b[33;03m    Estimate the quantum resources required for the BlockEncoding.\u001b[39;00m\n\u001b[32m    694\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    754\u001b[39m \n\u001b[32m    755\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m757\u001b[39m     ops_templates = [\u001b[43mop\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtemplate\u001b[49m() \u001b[38;5;28;01mfor\u001b[39;00m op \u001b[38;5;129;01min\u001b[39;00m operands]\n\u001b[32m    759\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34moperand_prep\u001b[39m():\n\u001b[32m    760\u001b[39m         operands = [temp.construct() \u001b[38;5;28;01mfor\u001b[39;00m temp \u001b[38;5;129;01min\u001b[39;00m ops_templates]\n",
-      "\u001b[31mAttributeError\u001b[39m: 'function' object has no attribute 'template'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k = 1: {'gate counts': {'cx': 4, 'gphase': 3, 'cz': 2, 'u3': 2, 'z': 1, 'x': 5}, 'depth': 16}\n",
+      "k = 2: {'gate counts': {'cx': 8, 'gphase': 6, 'cz': 4, 'u3': 4, 'z': 2, 'x': 10}, 'depth': 32}\n",
+      "k = 3: {'gate counts': {'cx': 12, 'gphase': 9, 'cz': 6, 'u3': 6, 'z': 3, 'x': 15}, 'depth': 48}\n",
+      "k = 4: {'gate counts': {'cx': 16, 'gphase': 12, 'cz': 8, 'u3': 8, 'z': 4, 'x': 20}, 'depth': 64}\n",
+      "k = 5: {'gate counts': {'cx': 20, 'gphase': 15, 'cz': 10, 'u3': 10, 'z': 5, 'x': 25}, 'depth': 80}\n",
+      "k = 6: {'gate counts': {'cx': 24, 'gphase': 18, 'cz': 12, 'u3': 12, 'z': 6, 'x': 30}, 'depth': 96}\n",
+      "k = 7: {'gate counts': {'cx': 28, 'gphase': 21, 'cz': 14, 'u3': 14, 'z': 7, 'x': 35}, 'depth': 112}\n"
      ]
     }
    ],
    "source": [
     "for k in range(1, 8):\n",
+    "    qv = operand_prep()\n",
     "    # Generate the k-th Chebyshev Block Encoding\n",
     "    # We use rescale=False to look at the raw complexity of the walk operator iterations\n",
     "    BE_cheb = BE.chebyshev(k, rescale=False)\n",
     "    \n",
     "    # Extract resource dictionary\n",
-    "    cheb_resources = BE_cheb.resources(operand_prep)()\n",
+    "    cheb_resources = BE_cheb.resources(qv)\n",
     "    print(f\"k = {k}: {cheb_resources}\")"
    ]
   },
