Added content to BE_vol2 tutorial for everything else that was missing. Proofread and minor changes needed now.

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -262,12 +262,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d7be9efc",
+   "metadata": {},
+   "source": [
+    "### Childs Kothari Somma for solving linear systems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3ca9a522",
    "metadata": {},
    "source": [
     "## Quantum Signal Processing (QSP)\n",
     "\n",
-    "While Qubitization allows us to block-encode Chebyshev polynomials $T_k$ by simply repeating a walk operator $W=RU$, Quantum Signal Processing (QSP) provides a way to implement arbitrary polynomial transformations $P(A)$.\n",
+    "While LCU and Qubitization allows us to block-encode operators and Chebyshev polynomials $T_k$;the latter by simply repeating a walk operator $W=RU$, Quantum Signal Processing (QSP) provides a way to implement arbitrary polynomial transformations $P(A)$.\n",
     "\n",
     "At its core, QSP manipulates a single-qubit \"signal\" using a sequence of rotations. If we have a signal operator $W(x)$ that encodes some value $x \\in [-1, 1]$, and we interleave it with a series of phase shifts $e^{i\\phi_j Z}$, the resulting product of unitaries can be written as:\n",
     "$$U_\\Phi(x) = e^{i\\phi_0 Z} \\prod_{j=1}^d W(x) e^{i\\phi_j Z}$$\n",
@@ -290,9 +298,11 @@
     "\n",
     "Building on our discussion of Qubitization and LCU, we can now dive into the \"Grand Unification\" of quantum algorithms: Quantum Singular Value Transformation (QSVT). In the context of Lin Lin’s lecture notes, these methods represent the most efficient way to process matrices on a quantum computer by treating a matrix as a ``BlockEncoding``.\n",
     "\n",
-    "QSVT allows us to apply a polynomial $P$ to the singular values of a matrix $A$ without needing a full Singular Value Decomposition (SVD). Beware, a bit more maths before showing examples of how to perform this simply and intuitevely as methods of the class we've been covering.\n",
+    "QSVT applies a polynomial $P$ to the singular values of a matrix $A$ without needing to perform a full Singular Value Decomposition (SVD). \n",
     "\n",
-    "Consider a matrix $A \\in \\mathbb{C}^{m \\times n}$ with $\\|A\\| \\leq 1$. Let its SVD be $A = \\sum_{i} \\sigma_i \\ket{w_i} \\bra{v_i}$. If we have a $(\\alpha, m, \\epsilon)$-block encoding $U$, our goal is to construct a new unitary $U_\\Phi$ that implements:\n",
+    "Disclaimer, a bit more maths before showing examples of how to perform this simply and intuitevely as methods of the class we've been covering.\n",
+    "\n",
+    "Consider a matrix $A \\in \\mathbb{C}^{m \\times n}$ with $\\|A\\| \\leq 1$ with SVD of $A = \\sum_{i} \\sigma_i \\ket{w_i} \\bra{v_i}$. If we have a $(\\alpha, m, \\epsilon)$-block encoding $U$, our goal is to construct a new unitary $U_\\Phi$ that implements:\n",
     "$$P(A) = \\sum_{i} P(\\sigma_i) \\ket{w_i} \\bra{v_i}.$$\n",
     "\n",
     "QSVT does this by using Projector-Controlled Phase gates interleaved with the block encoding $U$. Let $\\Pi = \\ket{0}\\bra{0}^a \\otimes \\mathbb{1}$ be the projector onto the subspace where $A$ lives. The QSVT circuit schematics for a degree-$d$ polynomial is:\n",
@@ -308,9 +318,9 @@
     "\n",
     "Recent advancements (e.g., Sünderhauf et al., 2023) have introduced Generalized versions that remove these restrictions.\n",
     "\n",
-    "- GQET (Generalized Quantum Eigenvalue Transformation): Specifically for Hermitian matrices, GQET applies complex polynomials $P(x)$ to eigenvalues. Unlike standard QET, $P(x)$ can have indefinite parity (e.g., $P(x) = x^2 + x + 1$). This is achieved by replacing simple $Z$-rotations with general $SU(2)$ rotations in the signal processing stage.\n",
+    "- GQET (Generalized Quantum Eigenvalue Transformation): Specifically for Hermitian matrices, GQET applies complex polynomials $P(x)$ to eigenvalues. Unlike standard QET, $P(x)$ can have indefinite parity (e.g., $P(x) = x^2 + x + 1$), enabled by using general $SU(2)$ rotations in the signal processing stage.\n",
     "\n",
-    "- GQSVT (Generalized Quantum Singular Value Transformation): This is the extension of QSVT to arbitrary matrices using the generalized framework.\n",
+    "- GQSVT (Generalized Quantum Singular Value Transformation): This extends QSVT to arbitrary matrices using the generalized framework, allowing for mixed parity polynomials.\n",
     "\n",
     "Why does this generalization matter so much? It allows for mixed parity polynomial, resulting in you being to implement functions like $e^{-iAt}$ directly without splitting them into sine (odd) and cosine (even) components.\n",
     "\n",
@@ -320,7 +330,9 @@
     "\n",
     "## QSP with Qrisp\n",
     "\n",
-    "\n"
+    "### Polynomial transformations: ``.poly``\n",
+    "\n",
+    "In Qrisp, the BlockEncoding class provides the .poly() method, which leverages GQET to apply a transformation $p(A)$ to a Hermitian matrix. You simply provide the coefficients, and Qrisp’s internal \"autopilot\" handles the phase solving and circuit construction.Example: Applying a custom polynomialThis example applies $p(A) = 1 + 2A + A^2$ to a matrix $A$ and applies the result to a vector $\\ket{b}$."
    ]
   },
   {
@@ -329,16 +341,92 @@
    "id": "3f8f1250",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from qrisp import *\n",
+    "from qrisp.block_encodings import BlockEncoding\n",
+    "\n",
+    "# Define a Hermitian matrix A and a vector b\n",
+    "A = np.array([[0.73255474, 0.14516978, -0.14510851, -0.0391581],\n",
+    "              [0.14516978, 0.68701415, -0.04929867, -0.00999921],\n",
+    "              [-0.14510851, -0.04929867, 0.76587818, -0.03420339],\n",
+    "              [-0.0391581, -0.00999921, -0.03420339, 0.58862043]])\n",
+    "b = np.array([0, 1, 1, 1])\n",
+    "\n",
+    "# Generate a block-encoding and apply the polynomial [1, 2, 1]\n",
+    "BA = BlockEncoding.from_array(A)\n",
+    "BA_poly = BA.poly(np.array([1., 2., 1.]))\n",
+    "\n",
+    "# Prepare the state |b>\n",
+    "def prep_b():\n",
+    "    operand = QuantumVariable(2)\n",
+    "    prepare(operand, b)\n",
+    "    return operand\n",
+    "\n",
+    "@terminal_sampling\n",
+    "def main():\n",
+    "    # Use Repeat-Until-Success (RUS) to apply the non-unitary polynomial\n",
+    "    operand = BA_poly.apply_rus(prep_b)()\n",
+    "    return operand\n",
+    "\n",
+    "res_dict = main()\n",
+    "amps = np.sqrt([res_dict.get(i, 0) for i in range(len(b))])\n",
+    "\n",
+    "# Classical verification\n",
+    "c = (np.eye(4) + 2 * A + A @ A) @ b\n",
+    "c = c / np.linalg.norm(c)\n",
+    "print(\"QUANTUM SIMULATION\\n\", amps, \"\\nCLASSICAL SOLUTION\\n\", c)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "0e5df298",
    "metadata": {},
    "source": [
-    "### Polynomial transformations in Qrisp: ``.poly``\n",
+    "### Solving linear systems: ``.inv``\n",
     "\n",
-    "In Qrisp, you don't need to manually calculate the phase angles $\\phi_j$ (which is classically a difficult task). The BlockEncoding class provides the .poly() method. You simply provide the desired polynomial coefficients, and Qrisp uses high-performance classical subroutines to find the necessary phases and construct the QSP sequence."
+    "Matrix inversion is implemented via Quantum Eigenvalue Transformation (QET) using a polynomial approximation of $1/x$ over the domain $D_{\\kappa} = [-1, -1/\\kappa] \\cup [1/\\kappa, 1]$. The polynomial degree scales as $\\mathcal{O}(\\kappa \\log(\\kappa/\\epsilon))$, where $\\kappa$ is the condition number.\n",
+    "\n",
+    "Let's, for example solve the Quantum Linear System Problem $Ax=b$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cda9d58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming A and b are defined as above\n",
+    "kappa = np.linalg.cond(A)\n",
+    "BA = BlockEncoding.from_array(A)\n",
+    "\n",
+    "# Approximate A^-1 with target precision 0.01 and condition number bound 2\n",
+    "BA_inv = BA.inv(eps=0.01, kappa=2)\n",
+    "\n",
+    "@terminal_sampling\n",
+    "def main():\n",
+    "    operand = BA_inv.apply_rus(prep_b)()\n",
+    "    return operand\n",
+    "\n",
+    "res_dict = main()\n",
+    "amps = np.sqrt([res_dict.get(i, 0) for i in range(len(b))])\n",
+    "\n",
+    "# Classical verification\n",
+    "c = (np.linalg.inv(A) @ b) / np.linalg.norm(np.linalg.inv(A) @ b)\n",
+    "print(\"QUANTUM SIMULATION\\n\", amps, \"\\nCLASSICAL SOLUTION\\n\", c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a86d7d5",
+   "metadata": {},
+   "source": [
+    "### Hamiltonian simulation: ``.sim``\n",
+    "\n",
+    "For a block-encoded Hamiltonian $H$, the .sim() method approximates the unitary evolution $e^{-itH}$. This utilizes the Jacobi-Anger expansion into Bessel functions:$$e^{-it\\cos(\\theta)} \\approx \\sum_{n=-N}^{N}(-i)^nJ_n(t)e^{in\\theta}$$The truncation error decreases super-exponentially with the order $N$.\n",
+    "\n",
+    "We can now simply simulate an Ising Hamiltonian:"
    ]
   },
   {
@@ -348,18 +436,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example: Applying a custom 3rd order polynomial P(x) = 0.5x^3 + 0.1x\n",
-    "# Note: The coefficients must satisfy |P(x)| <= 1\n",
-    "coeffs = [0, 0.1, 0, 0.5] \n",
-    "BE_poly = BE.poly(coeffs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "47f2da58",
-   "metadata": {},
-   "source": [
-    "This abstraction allows researchers to focus on the algorithm (the function to be applied) rather than the implementation (the underlying phase-shift sequences)."
+    "from qrisp.operators import X, Z\n",
+    "\n",
+    "def create_ising_hamiltonian(L, J, B):\n",
+    "    return sum(-J * Z(i) * Z(i + 1) for i in range(L-1)) + sum(B * X(i) for i in range(L))\n",
+    "\n",
+    "L = 4\n",
+    "H = create_ising_hamiltonian(L, 0.25, 0.5)\n",
+    "BE = BlockEncoding.from_operator(H)\n",
+    "\n",
+    "@terminal_sampling\n",
+    "def main(t):\n",
+    "    # Evolve state |0> for time t using order N=8\n",
+    "    BE_sim = BE.sim(t=t, N=8)\n",
+    "    operand = BE_sim.apply_rus(lambda: QuantumFloat(L))()\n",
+    "    return operand\n",
+    "\n",
+    "res_dict = main(0.5)"
    ]
   },
   {
@@ -367,7 +460,29 @@
    "id": "956be4ee",
    "metadata": {},
    "source": [
-    "### Solving linear systems in Qrisp: ``.inv``"
+    "## Conclusion\n",
+    "\n",
+    "As hopefully you're now convinced, having block encodings as programming abstractions lowers the barrier to entry for classical developers to dive into the field of state-of-the-art quantum computing algorithms, while at the same time allowing researchers to focus on the algorithm (the function to be applied) rather than the software implementations!\n",
+    "\n",
+    "A quick collection of take-home messages after this throrough (and math heavy) tutorial. We have transitioned from basic matrix representations to complex functional analysis on a quantum computer:\n",
+    "\n",
+    "- Qubitization is the engine that enables walking through 2D subspaces.\n",
+    "\n",
+    "- QSP/GQSP is the steering wheel, allowing you to transform $A$ into almost any $f(A)$.\n",
+    "\n",
+    "- Qrisp is the autopilot, solving for phase angles and automating resource management and uncomputation.\n",
+    "\n",
+    "If you're eager for more, there is still one tutorial that continues following the concepts, where we take these concepts a step further by introducing Generalized Quantum Signal Processing (GQSP) as a powerful tool for ground state preparation.\n",
+    "\n",
+    "In the next tutorial you will explore Ground State Preparation for a 10-qubit antiferromagnetic Heisenberg model. The tutorial covers:\n",
+    "\n",
+    "- Gaussian Filtering: How to define a Gaussian filter centered at the minimum eigenvalue to \"clean\" an initial state.\n",
+    "\n",
+    "- Chebyshev Approximation: The process of decomposing this filter into Chebyshev polynomials (you now know everything about), which are natively compatible with quantum block-encodings.\n",
+    "\n",
+    "- The RUS Protocol: Using the Repeat-Until-Success (RUS) mechanism in Qrisp to probabilistically project the system into the desired filtered state.\n",
+    "\n",
+    "- Performance Verification: A step-by-step comparison showing how the expectation value of the energy significantly drops—indicating a much higher overlap with the true ground state—after the GQSP filter is applied.\n"
    ]
   },
   {
